--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
         name: "Té Detox Natural",
         description: "Limpieza y vitalidad con ingredientes orgánicos.",
         price: 14.99,
-        img: "jarra-tea.jpg",
+        img: "jabon.jpg",
         category: "Alimentación Saludable",
         popular: false,
         dateAdded: "2025-08-05"
@@ -852,7 +852,7 @@
         name: "Crema Facial Orgánica",
         description: "Cuidado delicado para una piel radiante.",
         price: 39.99,
-        img: "https://images.unsplash.com/photo-1596462502278-27bfbc0744de?auto=format&fit=crop&w=400&q=80",
+        img: "shampoo-anticaspa",
         category: "Cuidado Personal",
         popular: true,
         dateAdded: "2025-08-06"
@@ -862,7 +862,7 @@
         name: "Bálsamo de Caléndula",
         description: "Alivio natural para piel sensible.",
         price: 11.99,
-        img: "https://images.unsplash.com/photo-1588691888062-817865c19e5d?auto=format&fit=crop&w=400&q=80",
+        img: "pasta-dental",
         category: "Cuidado Personal",
         popular: false,
         dateAdded: "2025-07-28"
@@ -1251,3 +1251,4 @@
 </body>
 
 </html>
+
