--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
               <img src="suplementos.png" alt="Suplementos Naturales" loading="lazy" />
               <div class="overlay"></div>
               <div class="content">
-                <h3 class="font-bold text-2xl mb-1">Suplementos</h3>
-                <p class="text-sm text-gray-200">Vitaminas y hierbas para tu salud</p>
+                <h3 class="font-bold text-2xl mb-1">Infancia</h3>
+                <p class="text-sm text-gray-200">Etapa de desarrollo fundamental que abarca desde el nacimiento hasta la adolescencia, caracterizada por cambios físicos, cognitivos y emocionales significativos</p>
               </div>
             </a>
           </div>
@@ -369,8 +369,8 @@
               <img src="aceites-essenciales.jpg" alt="Aceites Esenciales" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
-                <h3 class="font-bold text-2xl mb-1">Aceites Esenciales</h3>
-                <p class="text-sm text-gray-200">Aromaterapia y cuidado corporal</p>
+                <h3 class="font-bold text-2xl mb-1">Pubertad y Adolecencia</h3>
+                <p class="text-sm text-gray-200">Etapas de desarrollo marcadas por cambios físicos</p>
               </div>
             </a>
           </div>
@@ -380,8 +380,8 @@
               <img src="cuidado-personal.png" alt="Cuidado Personal" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
-                <h3 class="font-bold text-2xl mb-1">Cuidado Personal</h3>
-                <p class="text-sm text-gray-200">Productos naturales para la piel y el cabello</p>
+                <h3 class="font-bold text-2xl mb-1">Edad Repriductiva</h3>
+                <p class="text-sm text-gray-200">La edad fértil de la mujer generalmente se extiende desde la primera menstruacion hasta la menopausia.</p>
               </div>
             </a>
           </div>
@@ -391,8 +391,8 @@
               <img src="alimentacion.png" alt="Alimentación Saludable" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
-                <h3 class="font-bold text-2xl mb-1">Alimentación</h3>
-                <p class="text-sm text-gray-200">Superalimentos y productos orgánicos</p>
+                <h3 class="font-bold text-2xl mb-1">Embarazo</h3>
+                <p class="text-sm text-gray-200">El embarazo es el período en el que una mujer lleva un feto en su útero</p>
               </div>
             </a>
           </div>
@@ -402,8 +402,19 @@
               <img src="bienestar-fem.png" alt="Bienestar Femenino" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
-                <h3 class="font-bold text-2xl mb-1">Bienestar Femenino</h3>
-                <p class="text-sm text-gray-200">Apoyo hormonal y menopausia</p>
+                <h3 class="font-bold text-2xl mb-1">Climaterio y menopausia</h3>
+                <p class="text-sm text-gray-200">El climaterio es el período de transición en la vida de una persona.</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="swiper-slide">
+            <a href="#shop" class="category-card">
+              <img src="bienestar-fem.png" alt="Bienestar Femenino" loading="lazy">
+              <div class="overlay"></div>
+              <div class="content">
+                <h3 class="font-bold text-2xl mb-1">Vejez</h3>
+                <p class="text-sm text-gray-200">En la vejez, las mujeres experimentan una serie de cambios físicos y psicológicos.</p>
               </div>
             </a>
           </div>
@@ -1251,4 +1262,5 @@
 </body>
 
 </html>
+
 
