--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="suplementos.png" alt="Suplementos Naturales" loading="lazy" />
+              <img src="unnamed.png" alt="Suplementos Naturales" loading="lazy" />
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Infancia</h3>
@@ -1262,5 +1262,6 @@
 </body>
 
 </html>
+
 
 
