--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="aceites-essenciales.jpg" alt="Aceites Esenciales" loading="lazy">
+              <img src="pubertad.png" alt="Aceites Esenciales" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Pubertad y Adolecencia</h3>
@@ -377,7 +377,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="cuidado-personal.png" alt="Cuidado Personal" loading="lazy">
+              <img src="edadreproductiba.png" alt="Cuidado Personal" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Edad Repriductiva</h3>
@@ -388,7 +388,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="alimentacion.png" alt="Alimentación Saludable" loading="lazy">
+              <img src="embarazo.png" alt="Alimentación Saludable" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Embarazo</h3>
@@ -399,7 +399,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="bienestar-fem.png" alt="Bienestar Femenino" loading="lazy">
+              <img src="menopausia.png" alt="Bienestar Femenino" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Climaterio y menopausia</h3>
@@ -410,7 +410,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="bienestar-fem.png" alt="Bienestar Femenino" loading="lazy">
+              <img src="vejez.png" alt="Bienestar Femenino" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Vejez</h3>
@@ -1262,6 +1262,7 @@
 </body>
 
 </html>
+
 
 
 
