--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="edadreproductiba.png" alt="Cuidado Personal" loading="lazy">
+              <img src="edadreproductiva.png" alt="Cuidado Personal" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Edad Repriductiva</h3>
@@ -388,7 +388,7 @@
 
           <div class="swiper-slide">
             <a href="#shop" class="category-card">
-              <img src="embarazo.png" alt="Alimentación Saludable" loading="lazy">
+              <img src="Embarazo.png" alt="Alimentación Saludable" loading="lazy">
               <div class="overlay"></div>
               <div class="content">
                 <h3 class="font-bold text-2xl mb-1">Embarazo</h3>
@@ -1262,6 +1262,7 @@
 </body>
 
 </html>
+
 
 
 
