--- a/index.html
+++ b/index.html
@@ -496,16 +496,25 @@
             <div class="mb-8">
               <h3 class="text-2xl font-semibold font-sans mb-2 text-dark-slate">Misión</h3>
               <p class="text-gray-700 leading-relaxed font-body">
-                Ofrecer productos naturistas de alta calidad que promuevan el bienestar integral de la mujer, fomentando
-                un estilo de vida saludable y en armonía con la naturaleza.
+               Poner a tu alcance productos y servicios de calidad en el ámbito de salud para que logres salud, equilibrio y vida plena, a través de medicina ortomolecular y alternativa.
               </p>
             </div>
             <div>
               <h3 class="text-2xl font-semibold font-sans mb-2 text-dark-slate">Visión</h3>
-              <p class="text-gray-700 leading-relaxed font-body">
-                Ser la marca líder en el mercado de productos naturistas para el cuidado femenino, reconocida por la
-                confianza, calidad y compromiso con la salud natural.
-              </p>
+              <p class="text-gray-700 leading-relaxed font-body">La completa satisfacción del usuario a través de nuestros productos y servicios, acompañándolo en el cumplimiento de sus objetivos.
+               </p>
+            </div>
+            <div>
+              <h3 class="text-2xl font-semibold font-sans mb-2 text-dark-slate">Valores</h3>
+              <p class="text-gray-700 leading-relaxed font-body">Cuidamos la integridad de tu salud, asegurando confidencialidad y honestidad, fomentando la sororidad de la comunidad.
+               </p>
+            </div>
+            <div>
+              <h3 class="text-2xl font-semibold font-sans mb-2 text-dark-slate">Objetivo Principal</h3>
+              <p class="text-gray-700 leading-relaxed font-body">Preservar la salud femenina de forma natural, facilitando la adquisición de nuestros productos y servicios con un solo click.
+
+
+               </p>
             </div>
           </div>
           <div class="md:w-1/2 rounded-lg shadow-lg overflow-hidden w-full max-w-md mx-auto">
@@ -1093,3 +1102,4 @@
 </body>
 
 </html>
+
