--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <a href="#shop-page" class="category-card">
-                  <img src="unnamed.png" alt="Infancia" class="category-card-img" />
+                  <img src="niñez.jpeg" alt="Infancia" class="category-card-img" />
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Infancia</h3>
@@ -277,7 +277,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="#shop-page" class="category-card">
-                  <img src="pubertad.png" alt="Pubertad y Adolescencia" class="category-card-img">
+                  <img src="pubertad.jpeg" alt="Pubertad y Adolescencia" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Pubertad</h3>
@@ -287,7 +287,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="#shop-page" class="category-card">
-                  <img src="edadreproductiva.png" alt="Edad Reproductiva" class="category-card-img">
+                  <img src="edadproductiva.jpeg" alt="Edad Reproductiva" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Edad Reproductiva</h3>
@@ -307,7 +307,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="#shop-page" class="category-card">
-                  <img src="menopausia.png" alt="Climaterio y Menopausia" class="category-card-img">
+                  <img src="menopausia.jpeg" alt="Climaterio y Menopausia" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Menopausia</h3>
@@ -1102,4 +1102,5 @@
 </body>
 
 </html>
+
 
