--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       object-fit: cover;
       z-index: 1;
       transition: transform 0.5s ease;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave y sutil */
+      filter: brightness(200%);
     }
 
     .category-card:hover .category-card-img {
@@ -1102,5 +1104,6 @@
 </body>
 
 </html>
+
 
 
