--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       position: relative;
       z-index: 3;
       padding: 1.5rem;
-      color: #B38B59;
+      color: #fff;
       height: 100%;
-      display: flex;
+      display: center;
       flex-direction: column;
       justify-content: flex-end;
     }
@@ -1104,6 +1104,7 @@
 </body>
 
 </html>
+
 
 
 
