--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       position: relative;
       z-index: 3;
       padding: 1.5rem;
-      color: #fff;
+      color: #fcfbfb;
       height: 100%;
       display: center;
       flex-direction: column;
@@ -1104,6 +1104,7 @@
 </body>
 
 </html>
+
 
 
 
