--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       position: relative;
       z-index: 3;
       padding: 1.5rem;
-      color: #fcfbfb;
+      color: #fff;
       height: 100%;
       display: center;
       flex-direction: column;
-      justify-content: flex-end;
+      justify-content: flex-center;
     }
 
     .category-card-title-large {
@@ -1104,6 +1104,7 @@
 </body>
 
 </html>
+
 
 
 
