--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       height: 100%;
       display: center;
       flex-direction: column;
-      justify-content: flex-center;
+      justify-content: center;
     }
 
     .category-card-title-large {
@@ -283,7 +283,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Pubertad</h3>
-                    <p class="category-card-description">Etapas de desarrollo marcadas por cambios.</p>
+                    <p class="category-card-description"></p>
                   </div>
                 </a>
               </div>
@@ -293,7 +293,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Edad Reproductiva</h3>
-                    <p class="category-card-description">La edad fértil de la mujer.</p>
+                    <p class="category-card-description"></p>
                   </div>
                 </a>
               </div>
@@ -303,7 +303,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Embarazo</h3>
-                    <p class="category-card-description">El período de gestación.</p>
+                    <p class="category-card-description">.</p>
                   </div>
                 </a>
               </div>
@@ -313,7 +313,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Menopausia</h3>
-                    <p class="category-card-description">El período de transición en la vida.</p>
+                    <p class="category-card-description"></p>
                   </div>
                 </a>
               </div>
@@ -323,7 +323,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Vejez</h3>
-                    <p class="category-card-description">Experimenta una serie de cambios.</p>
+                    <p class="category-card-description"></p>
                   </div>
                 </a>
               </div>
@@ -1104,6 +1104,7 @@
 </body>
 
 </html>
+
 
 
 
