--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       height: 100%;
       display: center;
       flex-direction: column;
-      justify-content: center;
+      text: center;
     }
 
     .category-card-title-large {
@@ -1104,6 +1104,7 @@
 </body>
 
 </html>
+
 
 
 
