--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
       z-index: 2;
     }
 
-    .category-card-content {
-      position: relative;
-      z-index: 3;
-      padding: 1.5rem;
-      color: #fff;
-      height: 100%;
-      display: center;
-      flex-direction: column;
-      text: center;
-    }
+   .category-card-content {
+  position: relative;
+  z-index: 3;
+  padding: 1.5rem;
+  color: #fff;
+  height: 100%;
+  display: flex; /* Se corrigió a 'flex' para habilitar las propiedades de alineación */
+  align-items: center; /* Centra el contenido verticalmente */
+  justify-content: center; /* Centra el contenido horizontalmente */
+  text-align: center; /* Se corrigió a 'text-align' para centrar el texto */
+}
 
     .category-card-title-large {
       font-family: 'Playfair Display', serif;
@@ -1104,6 +1105,7 @@
 </body>
 
 </html>
+
 
 
 
