--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Infancia</h3>
-                    <p class="category-card-description">Etapa de desarrollo fundamental.</p>
+                    <p class="category-card-description"></p>
                   </div>
                 </a>
               </div>
@@ -1105,6 +1105,7 @@
 </body>
 
 </html>
+
 
 
 
