--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     .hero-section {
       position: relative;
-      height: 500px;
+      height: 700px;
       background-size: cover;
       background-position: center;
       display: flex;
@@ -251,15 +251,12 @@
           <source src="video-intro.mp4" type="video/mp4"
             onerror="this.onerror=null; this.src='https://placehold.co/1920x500/F5F5DC/B38B59?text=Video+de+Introduccion';" />
         </video>
-        <div class="absolute inset-0 bg-dark-slate bg-opacity-60 z-10"></div>
+        
         <div class="relative z-20 container mx-auto px-6 py-24 max-w-3xl text-white">
           <h1 class="text-5xl md:text-6xl font-extrabold font-sans leading-tight mb-4 drop-shadow-lg">Microdosis de Salud
           </h1>
-          <p class="text-xl md:text-2xl mb-8 drop-shadow-md font-body">Distribuimos productos naturistas enfocados a la
-            mujer para su bienestar y cuidado personal.</p>
-          <a href="#productos"
-            class="inline-block bg-primary-gold hover:bg-elegant-brown px-10 py-4 rounded-button font-semibold shadow-lg transition-colors font-body text-lg">Ver
-            ahora</a>
+          <p class="text-xl md:text-2xl mb-8 drop-shadow-md font-body"></p>
+          
         </div>
       </section>
 
@@ -1105,6 +1102,7 @@
 </body>
 
 </html>
+
 
 
 
