--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                   <img src="vejez.png" alt="Vejez" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
-                    <h3 class="category-card-title-large">Vejez</h3>
+                    <h3 class="category-card-title-large">Plenitud</h3>
                     <p class="category-card-description"></p>
                   </div>
                 </a>
@@ -1102,6 +1102,7 @@
 </body>
 
 </html>
+
 
 
 
