--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   <img src="menopausia.jpeg" alt="Climaterio y Menopausia" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
-                    <h3 class="category-card-title-large">Menopausia</h3>
+                    <h3 class="category-card-title-large">Climaterio y Menopausia</h3>
                     <p class="category-card-description"></p>
                   </div>
                 </a>
@@ -1102,6 +1102,7 @@
 </body>
 
 </html>
+
 
 
 
