--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@
         </a>
         <nav class="hidden md:flex space-x-8 text-dark-slate font-semibold">
           <a href="#hero" class="hover:text-primary-gold transition-colors">Inicio</a>
-          <a href="#productos" class="hover:text-primary-gold transition-colors">Productos</a>
           <a href="#shop-page" class="hover:text-primary-gold transition-colors">Tienda</a>
-          <a href="#acercade" class="hover:text-primary-gold transition-colors">Acerca de</a>
+          <a href="#acercade" class="hover:text-primary-gold transition-colors">Servicios</a>
+          <a href="#acercade" class="hover:text-primary-gold font-semibold">Medicina Ortomolecular</a>
+           <a href="#acercade" class="hover:text-primary-gold font-semibold">Acerca de</a>
+           <a href="#acercade" class="hover:text-primary-gold font-semibold">Contacto</a>
+          
         </nav>
         <div class="flex items-center space-x-4">
           <button id="cart-toggle" aria-label="Carrito"
@@ -238,9 +241,11 @@
       <nav id="mobile-menu" class="hidden md:hidden bg-white shadow-lg border-t border-gray-200">
         <div class="flex flex-col space-y-2 px-6 py-4 text-dark-slate">
           <a href="#hero" class="hover:text-primary-gold font-semibold">Inicio</a>
-          <a href="#productos" class="hover:text-primary-gold font-semibold">Productos</a>
           <a href="#shop-page" class="hover:text-primary-gold font-semibold">Tienda</a>
-          <a href="#acercade" class="hover:text-primary-gold font-semibold">Acerca de</a>
+           <a href="#acercade" class="hover:text-primary-gold transition-colors">Servicios</a>
+          <a href="#acercade" class="hover:text-primary-gold font-semibold">Medicina Ortomolecular</a>
+           <a href="#acercade" class="hover:text-primary-gold font-semibold">Acerca de</a>
+           <a href="#acercade" class="hover:text-primary-gold font-semibold">Contacto</a>
         </div>
       </nav>
     </header>
@@ -280,7 +285,7 @@
                   <img src="pubertad.jpeg" alt="Pubertad y Adolescencia" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
-                    <h3 class="category-card-title-large">Pubertad</h3>
+                    <h3 class="category-card-title-large">Pubertad y Adolecencia</h3>
                     <p class="category-card-description"></p>
                   </div>
                 </a>
@@ -1102,6 +1107,7 @@
 </body>
 
 </html>
+
 
 
 
