--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               </div>
               <div class="swiper-slide">
                 <a href="#shop-page" class="category-card">
-                  <img src="edadproductiva.jpeg" alt="Edad Reproductiva" class="category-card-img">
+                  <img src="Edadreproductiva.jpg" alt="Edad Reproductiva" class="category-card-img">
                   <div class="category-card-overlay"></div>
                   <div class="category-card-content">
                     <h3 class="category-card-title-large">Edad Reproductiva</h3>
@@ -1107,6 +1107,7 @@
 </body>
 
 </html>
+
 
 
 
