--- a/index.html
+++ b/index.html
@@ -523,10 +523,9 @@
             </div>
           </div>
           <div class="md:w-1/2 rounded-lg shadow-lg overflow-hidden w-full max-w-md mx-auto">
-            <video src="seda.mp4" autoplay muted loop playsinline controls class="w-full h-auto rounded-lg"
+            <img src="tarjeta.jpg" autoplay muted loop playsinline controls class="w-full h-auto rounded-lg"
               onerror="this.onerror=null; this.src='https://placehold.co/600x400/F5F5DC/B38B59?text=Video+Acerca+de';" >
-              Tu navegador no soporta la reproducción de video.
-            </video>
+              
           </div>
         </div>
       </section>
@@ -1107,6 +1106,7 @@
 </body>
 
 </html>
+
 
 
 
