--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
       <div class="container mx-auto px-6 py-4 flex justify-between items-center">
         <a href="#" class="text-3xl font-bold font-sans text-dark-slate">
-          <img src="logo_inicial.jpg" alt="Microdosis de Salud Logo" class="h-12"
+          <img src="Logo.jpg" alt="Microdosis de Salud Logo" class="h-12"
             onerror="this.onerror=null; this.src='https://placehold.co/150x40/042636/209F9B?text=Logo';" />
         </a>
         <nav class="hidden md:flex space-x-8 text-dark-slate font-semibold">
@@ -1106,6 +1106,7 @@
 </body>
 
 </html>
+
 
 
 
