--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="main-content">
         <header class="bg-white shadow-sm sticky top-0 z-50">
             <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-                <a href="#"><img src="Logo.jpg" alt="Microdosis de Salud Logo" class="h-12" onerror="this.onerror=null; this.src='https://placehold.co/150x40/042636/209F9B?text=Logo';" /></a>
+                <a href="#"><img src="Logo1.jpg" alt="Microdosis de Salud Logo" class="h-12" onerror="this.onerror=null; this.src='https://placehold.co/150x40/042636/209F9B?text=Logo';" /></a>
                 <nav class="hidden md:flex space-x-8 text-dark-slate font-semibold">
                     <a href="#hero" class="hover:text-primary-gold transition-colors">Inicio</a>
                     <a href="#shop-page" class="hover:text-primary-gold transition-colors">Tienda</a>
@@ -268,4 +268,5 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
