--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    colors: { 'primary-gold': '#B38B59', 'secondary-cream': '#F5F5DC', 'dark-slate': '#2C3E50', 'light-gray': '#ECF0F1', 'elegant-brown': '#7F523D' },
+                    colors: { 'primary-gold': '#27F5CC', 'secondary-cream': '#27F5CC', 'dark-slate': '#2C3E50', 'light-gray': '#ECF0F1', 'elegant-brown': '#7F523D' },
                     fontFamily: { sans: ['"Playfair Display"', 'serif'], body: ['"Poppins"', 'sans-serif'] },
                     borderRadius: { button: '25px' },
                 },
@@ -268,6 +268,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
