--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         tailwind.config = {
             theme: {
                 extend: {
-                    colors: { 'primary-gold': '#27F5CC', 'secondary-cream': '#27F5CC', 'dark-slate': '#2C3E50', 'light-gray': '#ECF0F1', 'elegant-brown': '#7F523D' },
+                    colors: { 'primary-gold': '#B38B59', 'secondary-cream': '#F5F5DC', 'dark-slate': '#2C3E50', 'light-gray': '#ECF0F1', 'elegant-brown': '#7F523D' },
                     fontFamily: { sans: ['"Playfair Display"', 'serif'], body: ['"Poppins"', 'sans-serif'] },
                     borderRadius: { button: '25px' },
                 },
@@ -69,7 +69,7 @@
                             <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Pubertad y Adolescencia"><img src="pubertad.jpeg" alt="Pubertad y Adolescencia" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Pubertad y Adolescencia</h3></div></a></div>
                             <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Edad Reproductiva"><img src="Edadreproductiva.jpg" alt="Edad Reproductiva" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Edad Reproductiva</h3></div></a></div>
                             <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Embarazo"><img src="embarazo.jpeg" alt="Embarazo" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Embarazo</h3></div></a></div>
-                            <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Climaterio y Menopausia"><img src="menopausia.jpeg" alt="Climaterio y Menopausia" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Climaterio y Menopausia</h3></div></a></div>
+                            <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Climaterio y Menopausia"><img src="plenitud.jpg" alt="Climaterio y Menopausia" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Climaterio y Menopausia</h3></div></a></div>
                             <div class="swiper-slide"><a href="#shop-page" class="category-card" data-category="Plenitud"><img src="vejez.png" alt="Plenitud" class="category-card-img"><div class="category-card-overlay"></div><div class="category-card-content"><h3 class="category-card-title-large">Plenitud</h3></div></a></div>
                         </div>
                         <div class="swiper-button-prev"></div><div class="swiper-button-next"></div><div class="swiper-pagination mt-8"></div>
@@ -268,6 +268,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
