--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <a href="#"
             class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-primary-gold transition text-white"><i
               class="ri-twitter-x-fill"></i></a>
-          <a href="#"
+          <a href="https://www.instagram.com/microdosis_de_salud/?igsh=amJiMTYzN3h0bDRl"
             class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-primary-gold transition text-white"><i
               class="ri-instagram-fill"></i></a>
           <a href="#"
@@ -305,6 +305,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
