--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                   <article class="bg-white rounded-lg shadow-md overflow-hidden"><img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Artículo 1" class="w-full h-48 object-cover" /><div class="p-6"><h3 class="text-xl font-semibold mb-2">Cómo mejorar tu bienestar</h3><p class="text-gray-600 mb-4 text-sm">Consejos prácticos para integrar hábitos saludables en tu rutina.</p><a href="#" class="text-primary-gold font-semibold hover:underline inline-flex items-center">Leer más <i class="ri-arrow-right-line ml-1"></i></a></div></article>
                   <article class="bg-white rounded-lg shadow-md overflow-hidden"><img src="https://images.unsplash.com/photo-1515377905703-c4788e51af15?auto=format&fit=crop&w=600&q=80" alt="Artículo 2" class="w-full h-48 object-cover" /><div class="p-6"><h3 class="text-xl font-semibold mb-2">Beneficios de los aceites</h3><p class="text-gray-600 mb-4 text-sm">Descubre cómo utilizar aceites naturales para armonizar cuerpo y mente.</p><a href="#" class="text-primary-gold font-semibold hover:underline inline-flex items-center">Leer más <i class="ri-arrow-right-line ml-1"></i></a></div></article>
-                  <article class="bg-white rounded-lg shadow-md overflow-hidden"><img src="https://images.unsplash.com/photo-1508609349937-5ec4ae374ebf?auto=format&fit=crop&w=600&q=80" alt="Artículo 3" class="w-full h-48 object-cover" /><div class="p-6"><h3 class="text-xl font-semibold mb-2">Alimentación saludable</h3><p class="text-gray-600 mb-4 text-sm">Ideas de nutrición natural para fortalecer el cuerpo.</p><a href="#" class="text-primary-gold font-semibold hover:underline inline-flex items-center">Leer más <i class="ri-arrow-right-line ml-1"></i></a></div></article>
+                  <article class="bg-white rounded-lg shadow-md overflow-hidden"><img src="karlita.png" alt="Artículo 3" class="w-full h-48 object-cover" /><div class="p-6"><h3 class="text-xl font-semibold mb-2">Alimentación saludable</h3><p class="text-gray-600 mb-4 text-sm">Ideas de nutrición natural para fortalecer el cuerpo.</p><a href="#" class="text-primary-gold font-semibold hover:underline inline-flex items-center">Leer más <i class="ri-arrow-right-line ml-1"></i></a></div></article>
                 </div>
               </div>
             </section>
@@ -305,6 +305,7 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
 
